--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                                 <div class="col-lg-6 d-none d-lg-flex fadeInRight animated" data-animation="fadeInRight"
                                     data-delay="1s" style="animation-delay: 1s;">
                                     <div class="text-start">
-                                        <h1 class="display-5 text-white">Get 15% off your rental! Choose Your Model
+                                        <h1 class="display-5 text-white">Discover Excellence with Rohaan Constructions
                                         </h1>
                                         <p>Treat yourself in USA</p>
                                     </div>
