--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@
 
 
             <div class="director-message-section">
-                <img src="../Rohaanconstr/img/subra-banner.jpg" alt="Director's Message Banner" class="director-banner">
+                <img src="img/subra-banner.jpg" alt="Director's Message Banner" class="director-banner">
             </div>
             </div>
 
