--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
 
         <div class="container-custom">
             <div class="section-custom">
-                <img src="../Rohaanconstr/img/blog-1.jpg" alt="Sustainable Construction">
+                <img src="img/blog-1.jpg" alt="Sustainable Construction">
                 <div>
                     <h2> <strong> Sustainable Construction</strong></h2>
                     <p>Sustainable construction, championed by the best builder in Chennai – Rohaan Constructions, is
@@ -824,10 +824,10 @@
                         Embracing change isn’t just a necessity; it’s the cornerstone of our commitment to delivering
                         excellence in every aspect of construction.</p>
                 </div>
-                <img src="../Rohaanconstr/img/blog-2.jpg" alt="Industry Development">
+                <img src="img/blog-2.jpg" alt="Industry Development">
             </div>
             <div class="section-custom">
-                <img src="../Rohaanconstr/img/blog-3.jpg" alt="Increased Property Value">
+                <img src="img/blog-3.jpg" alt="Increased Property Value">
                 <div>
                     <h2>Increased Property Value</h2>
                     <p>Eco-friendly buildings, a hallmark of Rohaan Constructions – the best builder in Chennai, offer
@@ -868,7 +868,7 @@
 
             <h1 class="display-5 text-capitalize text-white2 mb-3">Our Allied<span class="text-primary">
                     Companies</span></h1>
-            <img src="../Rohaanconstr/img/allied-logo.jpg" alt="Partners Logos" class="partners-banner">
+            <img src="img/allied-logo.jpg" alt="Partners Logos" class="partners-banner">
         </div>
 
 
@@ -1012,19 +1012,19 @@
             </div>
             <div class="unique-quote-info-section">
                 <div class="unique-quote-info-item">
-                    <img src="../Rohaanconstr/img/Vector-4.png" alt="Safety Icon" class="unique-quote-info-icon">
+                    <img src="img/Vector-4.png" alt="Safety Icon" class="unique-quote-info-icon">
                     <h3 class="unique-quote-info-title">Safety and Security</h3>
                     <p class="unique-quote-info-description">Rohaan Constructions takes safety and security very
                         seriously. All of our projects are designed and built to meet the highest safety standards.</p>
                 </div>
                 <div class="unique-quote-info-item">
-                    <img src="../Rohaanconstr/img/Vector-4.png" alt="Quality Icon" class="unique-quote-info-icon">
+                    <img src="img/Vector-4.png" alt="Quality Icon" class="unique-quote-info-icon">
                     <h3 class="unique-quote-info-title">Quality Products Used</h3>
                     <p class="unique-quote-info-description">We source our materials from reputable suppliers and have a
                         strict quality control process in place.</p>
                 </div>
                 <div class="unique-quote-info-item">
-                    <img src="../Rohaanconstr/img/Vector-4.png" alt="Build Icon" class="unique-quote-info-icon">
+                    <img src="img/Vector-4.png" alt="Build Icon" class="unique-quote-info-icon">
                     <h3 class="unique-quote-info-title">Build Quality</h3>
                     <p class="unique-quote-info-description">We use the latest construction techniques and have a team
                         of experienced builders committed to delivering high-quality work.</p>
