--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
 
         <div class="container-custom">
             <div class="section-custom">
-                <img src="../Rohaanconstr/img/blog-1.jpg" alt="Sustainable Construction">
+                <img src="../Rohaanconstr/img/image 23.png" alt="Sustainable Construction">
                 <div>
                     <h2> <strong> Sustainable Construction</strong></h2>
                     <p>Sustainable construction, championed by the best builder in Chennai – Rohaan Constructions, is
@@ -824,10 +824,10 @@
                         Embracing change isn’t just a necessity; it’s the cornerstone of our commitment to delivering
                         excellence in every aspect of construction.</p>
                 </div>
-                <img src="../Rohaanconstr/img/blog-2.jpg" alt="Industry Development">
+                <img src="../Rohaanconstr/img/image 24.png" alt="Industry Development">
             </div>
             <div class="section-custom">
-                <img src="../Rohaanconstr/img/blog-3.jpg" alt="Increased Property Value">
+                <img src="../Rohaanconstr/img/image 25.png" alt="Increased Property Value">
                 <div>
                     <h2>Increased Property Value</h2>
                     <p>Eco-friendly buildings, a hallmark of Rohaan Constructions – the best builder in Chennai, offer
@@ -878,10 +878,11 @@
 
             <div class="content-container">
                 <div class="image-grid">
-                    <img src="../Rohaanconstr/img/blog-1.jpg" alt="Image 1">
-                    <img src="../Rohaanconstr/img/blog-1.jpg" alt="Image 2">
-                    <img src="../Rohaanconstr/img/blog-1.jpg" alt="Image 3">
-                    <img src="../Rohaanconstr/img/blog-1.jpg" alt="Image 4">
+                    <img src="../Rohaanconstr/img/image 41.png" alt="Image 1">
+                    <img src="../Rohaanconstr/img/image 44.png" alt="Image 4">
+                    <img src="../Rohaanconstr/img/image 42.png" alt="Image 2">
+                    <img src="../Rohaanconstr/img/image 43.png" alt="Image 3">
+                  
                 </div>
                 <div class="text-content">
                     <p>
