--- a/index.html
+++ b/index.html
@@ -829,10 +829,10 @@
 
                 <img src="img/image 24.png" alt="Industry Development">
             </div>
-            <div class="section-custom">
+<!--             <div class="section-custom">
                 <img src="img/image 25.png" alt="Increased Property Value">
                 <img src="img/blog-2.jpg" alt="Industry Development">
-            </div>
+            </div> -->
             <div class="section-custom">
                 <img src="img/blog-3.jpg" alt="Increased Property Value">
                 <div>
