--- a/index.html
+++ b/index.html
@@ -710,10 +710,10 @@
 
             <div class="content-container">
                 <div class="image-grid">
-                    <img src="../Rohaanconstr/img/image 41.png" alt="Image 1">
-                    <img src="../Rohaanconstr/img/image 44.png" alt="Image 4">
-                    <img src="../Rohaanconstr/img/image 42.png" alt="Image 2">
-                    <img src="../Rohaanconstr/img/image 43.png" alt="Image 3">
+                    <img src="img/image 41.png" alt="Image 1">
+                    <img src="img/image 44.png" alt="Image 4">
+                    <img src="img/image 42.png" alt="Image 2">
+                    <img src="img/image 43.png" alt="Image 3">
                   
                 </div>
                 <div class="text-content">
