Moved index.html to root

--- a/index.html
+++ b/index.html
@@ -726,7 +726,14 @@
             <img src="img/allied-logo.jpg" alt="Partners Logos" class="partners-banner">
         </div>
 
-
+        <div class="partners-section">
+            <h2 class="display-5 text-capitalize text-white2 mb-3">
+              Our Allied <span class="text-primary">Companies</span>
+            </h2>
+            <img src="img/allied-logo.jpg" alt="Partners Logos" class="partners-banner desktop-image">
+            <img src="img/Dir.msg.png" alt="Partners Logos Mobile" class="partners-banner mobile-image">
+          </div>
+          
 
        <section class="why-choose-section">
             <h1 class="display-5 text-capitalize text-white1 mb-3">Why Choose Rohaan Constructions?</h1>
