Moved index.html to root

--- a/index.html
+++ b/index.html
@@ -722,11 +722,11 @@
                 choice
                 for real estate development in Chennai. </div>
 
-
-            <div class="director-message-section">
-                <img src="img/subra-banner.jpg" alt="Director's Message Banner" class="director-banner">
-                <img src="img/Dir.msg.png" alt="Partners Logos Mobile" class="partners-banner mobile-image">
-            </div>
+                <div class="director-message-section">
+                    <img src="img/subra-banner.jpg" alt="Director's Message Banner" class="director-banner desktop-image">
+                    <img src="img/Dir.msg.png" alt="Director's Message Mobile" class="mobile-image">
+                </div>
+                
         </div>
 
     </div>
