--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         </div>
 
                     </div>
-                    <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Book A Site Visit </a>
+                    <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Book a Site Visit </a>
                 </div>
             </nav>
         </div>
