Moved index.html to root

--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
 
                 <div class="director-message-section">
                     <img src="img/subra-banner.jpg" alt="Director's Message Banner" class="director-banner desktop-image">
-                    <img src="img/Dir.msg.png" alt="Director's Message Mobile" class="mobile-image">
+                    <img src="img/Dirmsg.png" alt="Director's Message Mobile" class="mobile-image">
                 </div>
                 
         </div>
