--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div id="carouselId" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
             <div class="contact-icons">
                 <a href="tel:9003198331" class="phone-icon">
-                    <span class="rotated-text"> 9003198331</span> <i class="fas fa-phone-alt"></i>
+                    <span class="rotated-text"> 9003198331</span> <i class="ph-icon fas fa-phone-alt"></i>
                 </a>
                 <a href="https://wa.me/9003198331" target="_blank" class="whatsapp-icon">
                     <img src="img/what-icom.png" alt="WhatsApp Icon">
@@ -282,7 +282,7 @@
 
     <div class="container-fluid categories pb-5">
         <div class="container pb-5">
-            <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
+            <!-- <div class="center text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;"> -->
                 <h1 class="display-5 text-capitalize ">Our Projects </h1>
 
                 <p class="mb-0">Residential Property | Commercial Property
