Moved index.html to root

--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
             Companies</span></h1>
 
         <div class="partners-section">
-            <img src="img/allied-logo.jpg" alt="Partners Logos" class="partners-banner">
+            <img src="img/alliedcom.png" alt="Partners Logos" class="partners-banner">
             <img src="img/Frame 4.png" alt="Director's Message Mobile" class="mobile-image1">
         </div>
         <br>
