Moved index.html to root

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <!-- <div class="center text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;"> -->
                 <h1 class="display-5 text-capitalize ">Our Projects </h1>
 
-                <p class="mb-0">Residential Property | Commercial Property
+                <p class="resendial mb-0">Residential Property | Commercial Property
 
                 </p>
             </div>
