Moved index.html to root

--- a/index.html
+++ b/index.html
@@ -283,166 +283,165 @@
     <div class="container-fluid categories pb-5">
         <div class="container pb-5">
             <!-- <div class="center text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;"> -->
-                <h1 class="display-5 text-capitalize ">Our Projects </h1>
+            <h1 class="display-5 text-capitalize ">Our Projects </h1>
 
-                <p class="resendial mb-0">Residential Property | Commercial Property
+            <p class="resendial mb-0">Residential Property | Commercial Property
 
-                </p>
-            </div>
-            <br>
-            <div class="categories-carousel owl-carousel wow fadeInUp" data-wow-delay="0.1s">
-                <div class="categories-item p-4">
-                    <div class="categories-item-inner">
-                        <div class="categories-img rounded-top">
-                            <img src="img/Front-View-min.jpg" class="img-fluid w-100 rounded-top" alt="">
-                        </div>
-                        <div class="categories-content rounded-bottom p-4">
-                            <h4>Rohaan Cypress</h4>
-                            <div class="categories-review mb-4">
-                                <p>Madippakam</p>
-
-                            </div>
-                            <div class="mb-4">
-                                <h4 class="bg-white text-primary rounded-pill py-2 px-4 mb-0">₹ 68 Lk Onwards</h4>
-                            </div>
-                            <div class="row gy-2 gx-0 text-center mb-4">
-                                <div class="col-6 border-end border-white">
-                                    <i class="fa fa-users text-dark"></i> <span class="text-body ms-1">23 Units</span>
-                                </div>
-                                <div class="col-6 border-end border-white">
-                                    <i class="fa fa-car text-dark"></i> <span class="text-body ms-1">887-1208
-                                        Sq.ft</span>
-                                </div>
-                                <div class="col-6">
-                                    <i class="fa fa-gas-pump text-dark"></i> <span class="text-body ms-1">2BHK &
-                                        3BHK</span>
-                                </div>
-                                <div class="col-6 border-end border-white">
-                                    <i class="fa fa-car text-dark"></i> <span class="text-body ms-1">
-                                        7 Amenities</span>
-                                </div>
-
-                            </div>
-                            <a href="#" class="btn btn-primary rounded-pill d-flex justify-content-center py-3">Book
-                                Now</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="categories-item p-4">
-                    <div class="categories-item-inner">
-                        <div class="categories-img rounded-top">
-                            <img src="img/Front-View-min.jpg" class="img-fluid w-100 rounded-top" alt="">
-                        </div>
-                        <div class="categories-content rounded-bottom p-4">
-                            <h4>Rohaan Phoenix </h4>
-                            <div class="categories-review mb-4">
-                                <p>Medavakkam</p>
-
-                            </div>
-                            <div class="mb-4">
-                                <h4 class="bg-white text-primary rounded-pill py-2 px-4 mb-0">₹ 72 Lk Onwards</h4>
-                            </div>
-                            <div class="row gy-2 gx-0 text-center mb-4">
-                                <div class="col-6 border-end border-white">
-                                    <i class="fa fa-users text-dark"></i> <span class="text-body ms-1">12 Units</span>
-                                </div>
-                                <div class="col-6 border-end border-white">
-                                    <i class="fa fa-car text-dark"></i> <span class="text-body ms-1">1024-1197
-                                        Sq.ft</span>
-                                </div>
-                                <div class="col-6">
-                                    <i class="fa fa-gas-pump text-dark"></i> <span class="text-body ms-1">2BHK &
-                                        3BHK</span>
-                                </div>
-                                <div class="col-6 border-end border-white">
-                                    <i class="fa fa-car text-dark"></i> <span class="text-body ms-1">
-                                        5 Amenities</span>
-                                </div>
-
-                            </div>
-                            <a href="#" class="btn btn-primary rounded-pill d-flex justify-content-center py-3">Book
-                                Now</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="categories-item p-4">
-                    <div class="categories-item-inner">
-                        <div class="categories-img rounded-top">
-                            <img src="img/Front-View-min.jpg" class="img-fluid w-100 rounded-top" alt="">
-                        </div>
-                        <div class="categories-content rounded-bottom p-4">
-                            <h4>Rohaan Ashoka</h4>
-                            <div class="categories-review mb-4">
-                                <p>Perumbakkam</p>
-
-                            </div>
-                            <div class="mb-4">
-                                <h4 class="bg-white text-primary rounded-pill py-2 px-4 mb-0">₹ 70 Lk Onwards</h4>
-                            </div>
-                            <div class="row gy-2 gx-0 text-center mb-4">
-                                <div class="col-6 border-end border-white">
-                                    <i class="fa fa-users text-dark"></i> <span class="text-body ms-1">25 Units</span>
-                                </div>
-                                <div class="col-6 border-end border-white">
-                                    <i class="fa fa-car text-dark"></i> <span class="text-body ms-1">1008-1224
-                                        Sq.ft</span>
-                                </div>
-                                <div class="col-6">
-                                    <i class="fa fa-gas-pump text-dark"></i> <span
-                                        class="text-body ms-1">2/2.5/3BHK</span>
-                                </div>
-                                <div class="col-6 border-end border-white">
-                                    <i class="fa fa-car text-dark"></i> <span class="text-body ms-1">
-                                        5 Amenities</span>
-                                </div>
-
-                            </div>
-                            <a href="#" class="btn btn-primary rounded-pill d-flex justify-content-center py-3">Book
-                                Now</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="categories-item p-4">
-                    <div class="categories-item-inner">
-                        <div class="categories-img rounded-top">
-                            <img src="img/Front-View-min.jpg" class="img-fluid w-100 rounded-top" alt="">
-                        </div>
-                        <div class="categories-content rounded-bottom p-4">
-                            <h4>Rohaan Cypress</h4>
-                            <div class="categories-review mb-4">
-                                <p>Madippakam</p>
-
-                            </div>
-                            <div class="mb-4">
-                                <h4 class="bg-white text-primary rounded-pill py-2 px-4 mb-0">₹ 68 Lk Onwards</h4>
-                            </div>
-                            <div class="row gy-2 gx-0 text-center mb-4">
-                                <div class="col-6 border-end border-white">
-                                    <i class="fa fa-users text-dark"></i> <span class="text-body ms-1">23 Units</span>
-                                </div>
-                                <div class="col-6 border-end border-white">
-                                    <i class="fa fa-car text-dark"></i> <span class="text-body ms-1">887-1208
-                                        Sq.ft</span>
-                                </div>
-                                <div class="col-6">
-                                    <i class="fa fa-gas-pump text-dark"></i> <span class="text-body ms-1">2BHK &
-                                        3BHK</span>
-                                </div>
-                                <div class="col-6 border-end border-white">
-                                    <i class="fa fa-car text-dark"></i> <span class="text-body ms-1">
-                                        7 Amenities</span>
-                                </div>
-
-                            </div>
-                            <a href="#" class="btn btn-primary rounded-pill d-flex justify-content-center py-3">Book
-                                Now</a>
-                        </div>
-                    </div>
-                </div>
-
-
-            </div>
+            </p>
         </div>
+        <br>
+        <div class="categories-carousel owl-carousel wow fadeInUp" data-wow-delay="0.1s">
+            <div class="categories-item p-4">
+                <div class="categories-item-inner">
+                    <div class="categories-img rounded-top">
+                        <img src="img/Front-View-min.jpg" class="img-fluid w-100 rounded-top" alt="">
+                    </div>
+                    <div class="categories-content rounded-bottom p-4">
+                        <h4>Rohaan Cypress</h4>
+                        <div class="categories-review mb-4">
+                            <p>Madippakam</p>
+
+                        </div>
+                        <div class="mb-4">
+                            <h4 class="bg-white text-primary rounded-pill py-2 px-4 mb-0">₹ 68 Lk Onwards</h4>
+                        </div>
+                        <div class="row gy-2 gx-0 text-center mb-4">
+                            <div class="col-6 border-end border-white">
+                                <i class="fa fa-users text-dark"></i> <span class="text-body ms-1">23 Units</span>
+                            </div>
+                            <div class="col-6 border-end border-white">
+                                <i class="fa fa-car text-dark"></i> <span class="text-body ms-1">887-1208
+                                    Sq.ft</span>
+                            </div>
+                            <div class="col-6">
+                                <i class="fa fa-gas-pump text-dark"></i> <span class="text-body ms-1">2BHK &
+                                    3BHK</span>
+                            </div>
+                            <div class="col-6 border-end border-white">
+                                <i class="fa fa-car text-dark"></i> <span class="text-body ms-1">
+                                    7 Amenities</span>
+                            </div>
+
+                        </div>
+                        <a href="#" class="btn btn-primary rounded-pill d-flex justify-content-center py-3">Book
+                            Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="categories-item p-4">
+                <div class="categories-item-inner">
+                    <div class="categories-img rounded-top">
+                        <img src="img/Front-View-min.jpg" class="img-fluid w-100 rounded-top" alt="">
+                    </div>
+                    <div class="categories-content rounded-bottom p-4">
+                        <h4>Rohaan Phoenix </h4>
+                        <div class="categories-review mb-4">
+                            <p>Medavakkam</p>
+
+                        </div>
+                        <div class="mb-4">
+                            <h4 class="bg-white text-primary rounded-pill py-2 px-4 mb-0">₹ 72 Lk Onwards</h4>
+                        </div>
+                        <div class="row gy-2 gx-0 text-center mb-4">
+                            <div class="col-6 border-end border-white">
+                                <i class="fa fa-users text-dark"></i> <span class="text-body ms-1">12 Units</span>
+                            </div>
+                            <div class="col-6 border-end border-white">
+                                <i class="fa fa-car text-dark"></i> <span class="text-body ms-1">1024-1197
+                                    Sq.ft</span>
+                            </div>
+                            <div class="col-6">
+                                <i class="fa fa-gas-pump text-dark"></i> <span class="text-body ms-1">2BHK &
+                                    3BHK</span>
+                            </div>
+                            <div class="col-6 border-end border-white">
+                                <i class="fa fa-car text-dark"></i> <span class="text-body ms-1">
+                                    5 Amenities</span>
+                            </div>
+
+                        </div>
+                        <a href="#" class="btn btn-primary rounded-pill d-flex justify-content-center py-3">Book
+                            Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="categories-item p-4">
+                <div class="categories-item-inner">
+                    <div class="categories-img rounded-top">
+                        <img src="img/Front-View-min.jpg" class="img-fluid w-100 rounded-top" alt="">
+                    </div>
+                    <div class="categories-content rounded-bottom p-4">
+                        <h4>Rohaan Ashoka</h4>
+                        <div class="categories-review mb-4">
+                            <p>Perumbakkam</p>
+
+                        </div>
+                        <div class="mb-4">
+                            <h4 class="bg-white text-primary rounded-pill py-2 px-4 mb-0">₹ 70 Lk Onwards</h4>
+                        </div>
+                        <div class="row gy-2 gx-0 text-center mb-4">
+                            <div class="col-6 border-end border-white">
+                                <i class="fa fa-users text-dark"></i> <span class="text-body ms-1">25 Units</span>
+                            </div>
+                            <div class="col-6 border-end border-white">
+                                <i class="fa fa-car text-dark"></i> <span class="text-body ms-1">1008-1224
+                                    Sq.ft</span>
+                            </div>
+                            <div class="col-6">
+                                <i class="fa fa-gas-pump text-dark"></i> <span class="text-body ms-1">2/2.5/3BHK</span>
+                            </div>
+                            <div class="col-6 border-end border-white">
+                                <i class="fa fa-car text-dark"></i> <span class="text-body ms-1">
+                                    5 Amenities</span>
+                            </div>
+
+                        </div>
+                        <a href="#" class="btn btn-primary rounded-pill d-flex justify-content-center py-3">Book
+                            Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="categories-item p-4">
+                <div class="categories-item-inner">
+                    <div class="categories-img rounded-top">
+                        <img src="img/Front-View-min.jpg" class="img-fluid w-100 rounded-top" alt="">
+                    </div>
+                    <div class="categories-content rounded-bottom p-4">
+                        <h4>Rohaan Cypress</h4>
+                        <div class="categories-review mb-4">
+                            <p>Madippakam</p>
+
+                        </div>
+                        <div class="mb-4">
+                            <h4 class="bg-white text-primary rounded-pill py-2 px-4 mb-0">₹ 68 Lk Onwards</h4>
+                        </div>
+                        <div class="row gy-2 gx-0 text-center mb-4">
+                            <div class="col-6 border-end border-white">
+                                <i class="fa fa-users text-dark"></i> <span class="text-body ms-1">23 Units</span>
+                            </div>
+                            <div class="col-6 border-end border-white">
+                                <i class="fa fa-car text-dark"></i> <span class="text-body ms-1">887-1208
+                                    Sq.ft</span>
+                            </div>
+                            <div class="col-6">
+                                <i class="fa fa-gas-pump text-dark"></i> <span class="text-body ms-1">2BHK &
+                                    3BHK</span>
+                            </div>
+                            <div class="col-6 border-end border-white">
+                                <i class="fa fa-car text-dark"></i> <span class="text-body ms-1">
+                                    7 Amenities</span>
+                            </div>
+
+                        </div>
+                        <a href="#" class="btn btn-primary rounded-pill d-flex justify-content-center py-3">Book
+                            Now</a>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
     </div>
 
     <!-- Features Start -->
@@ -846,7 +845,7 @@
                     <p>
                     <h4>Innovative Solutions:</h4> Recognized as one of the top commercial construction companies in
                     Medavakkam.</p>
-                    <h2>Explore Our Legacy of Excellence</h2>
+                    <h4>Explore Our Legacy of Excellence:</h4>
                     <p>Rohaan Constructions is more than just a builder; we’re a partner in your journey to finding or
                         creating your perfect space. Explore our portfolio today and experience why we are the trusted
                         name in real estate development in Chennai.</p>
