--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <span class="fa fa-bars"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <div class="navbar-nav mx-auto py-0">
+                    <div class="navbarleft navbar-nav mx-auto py-0">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
 
                         <div class="nav-item dropdown">
