Moved index.html to root

--- a/index.html
+++ b/index.html
@@ -1197,6 +1197,49 @@ document.addEventListener("DOMContentLoaded", function () {
         </div> -->
         <!-- Testimonial End -->
 
+
+        <section class="projects-section">
+            <h2 class="section-title">Our Projects</h2>
+            <div class="projects-container">
+                <div class="project-category">
+                    <h3>Chennai</h3>
+                    <h4>FLATS</h4>
+                    <ul>
+                        <li><a href="#">1 BHK Flats in Chennai</a></li>
+                        <li><a href="#">2 BHK Flats in Chennai</a></li>
+                        <li><a href="#">3 BHK Flats in Chennai</a></li>
+                    </ul>
+                </div>
+                <div class="project-category">
+                    <h3>Apartments in Chennai</h3>
+                    <h4>PRICE RANGE</h4>
+                    <ul>
+                        <li><a href="#">Apartments Between 50L - 60L in Chennai</a></li>
+                        <li><a href="#">Apartments Between 70L - 80L in Chennai</a></li>
+                        <li><a href="#">Apartments Between 80L - 90L in Chennai</a></li>
+                    </ul>
+                </div>
+                <div class="project-category">
+                    <h3>Apartments in Chennai</h3>
+                    <h4>FLATS</h4>
+                    <ul>
+                        <li><a href="#">2BHK Flats in Madipakkam</a></li>
+                        <li><a href="#">2BHK Flats in Perumbakkam</a></li>
+                        <li><a href="#">2BHK Flats in Medavakkam</a></li>
+                    </ul>
+                </div>
+                <div class="project-category">
+                    <h3>Flats in Chennai</h3>
+                    <h4>APARTMENTS</h4>
+                    <ul>
+                        <li><a href="#">Apartments in Madipakkam</a></li>
+                        <li><a href="#">Apartments in Perumbakkam</a></li>
+                        <li><a href="#">Apartments in Medavakkam</a></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
         <!-- Footer Start -->
         <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
             <div class="container py-5">
@@ -1225,7 +1268,7 @@ document.addEventListener("DOMContentLoaded", function () {
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
-                            <h4 class="text-white mb-0">Quick Links</h4>
+                            <h4 class="text-white mb-0">Projects</h4>
                             <a href="#"><i class="fas fa-angle-right me-2"></i> Residential Projects</a>
                             <a href="#"><i class="fas fa-angle-right me-2"></i> Commercial Projects </a>
                             <a href="#"><i class="fas fa-angle-right me-2"></i> Villa</a>
