Moved index.html to root

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+  <link rel="icon" href="img/rcpl-icon.png" type="image/png">
+
 </head>
 <script>
 document.addEventListener("DOMContentLoaded", () => {
